Fixed parallax mastheads "jumping" on first scroll
JS calculation of illustration placement wasn’t factoring in the `top`
added in CSS.

As part of this fix, we also have the homepage image ‘attach’ to the
top, like all other masthead images, instead of the bottom

--- a/_src/sass/layouts/_homepage.scss
+++ b/_src/sass/layouts/_homepage.scss
@@ -35,8 +35,6 @@
     }
 
     .illustration .img {
-        top: auto;
-        bottom: 0;
         width: 1400px;
         height: 894px;
         background: transparent url("/img/orange.jpg") center center no-repeat;
